# lodestone

./: CHANGELOG.md  README.md  package-lock.json  package.json  rust-toolchain.toml
.github/workflows/: release.yml
scripts/: extract-changelog.mjs  release.mjs
sidecar/: bot-worker.mjs  login.mjs  package-lock.json  package.json  shared.mjs
src/: i18n.js  index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: avatar.rs  commands.rs  engine.rs  lib.rs  main.rs  secrets.rs  store.rs  tray.rs  updater.rs
src/js/: accounts.js  api.js  auth.js  dom.js  icons.js  overlays.js  server.js  settings.js  store.js  updates.js
src/locales/: de.json  en.json
